css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
* {
    box-sizing: border-box;
  }

body {
    /* background-color: black; */
    /* color: white; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: dimgrey;
    background-image: url('./../assets/img/binary.jpg');
    font-family: 'Press Start 2P', cursive;
    overflow: hidden;
}

.modal {
    position: absolute;
    display: flex;
    margin-top: 10vh;
    z-index: 100;
    height: 90%;
    width: 80%;
    background-color: black;
    border: 2px solid white;
}

.exterior {
    border: 5px solid black;
    border-radius: 5px;
}

#screen {
    background-color: black;
    justify-self: center;
    align-self: center;
    height: 60%;
    width: 80%;
    margin: auto;
    padding: 2rem 7rem;
    z-index: 5;
}

.active::-webkit-scrollbar {
    /* width: 2%; */
    display: none;
    background-color: black;
    border: 1px solid white;
}

.active::-webkit-scrollbar-thumb {
    background-color: whitesmoke;
}


.active {
    border: 5px double white;
    box-shadow: 0px 0px 25px inset whitesmoke;
    overflow-y: scroll;
    scroll-behavior: auto;
    scroll-padding-top: 50rem;
}

#screen > p {
    color: white;
    text-align: center;
    line-height: 2.5rem;
}

.current {
    display: inline-block;
    font-size: 1.18rem;
    color:rgb(0, 153, 255);
    animation: float 0.5s infinite;
}

@keyframes float {
    0% {
        transform: scale(1);
    }
    50% {
        transform: scale(1.2);
    }
    100% {
        transform: scale(1);
    }
}

.timer-container, .light-container, .input-heart-container {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: black;
}

#timer {
    font-size: 80px;
}

.user-interface {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    margin-bottom: auto;
    width: 65rem;
}


.input-heart-container {
    height: 12rem;
    width: 28rem;
    flex-direction: column;
}

.heart {
    height: 4rem;
    width: 4rem;
    margin-bottom: 0;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

.full {
    background-image: url('./../assets/img/heart-full.png');
}

.none {
    background-image: url('./../assets/img/heart-none.png');
}

.heart-container {
    width: 25rem;
    display: flex;
    justify-content: space-around;
    align-items: flex-end;
}

input {
    height: 5rem;
    width: 25rem;
    font-size: 32px;
    border: none;
    font-family: 'Press Start 2P', cursive;
    text-align: center;
    background-color: lightslategray;
    box-shadow: 0px 0px 25px black inset;
    color: white;
    font-weight: bolder;
    border-radius: 25px;
    display: flex;
    padding: 0;
    text-shadow: 0px 0px 5px black;
}

.disconnected {
    z-index: 5;
    background-color: rgb(0, 153, 255);
}

.valid {
    color: #0fa;
}

.invalid {
    color: #FE0300;
}

::placeholder {
    color: white;
    opacity: 1;
    padding: 0;
    margin: 0;
}

input:hover{
    animation: inputhover 1s forwards;
    cursor: pointer;
}

@keyframes inputhover {
    0% {
        box-shadow:
        /* White glow */
        0 0 2px #fff,
        0 0 3px #fff,
        0 0 8px #fff,
        /* Green glow */
        0 0 1px rgb(0, 153, 255),
        0 0 2px rgb(0, 153, 255),
        0 0 4px rgb(0, 153, 255),
        0 0 8px rgb(0, 153, 255),
        0 0 10px rgb(0, 153, 255)
    }
    40% {
        box-shadow:
        /* White glow */
        0 0 3px #fff,
        0 0 5px #fff,
        0 0 14px #fff,
        /* Green glow */
        0 0 12px rgb(0, 153, 255),
        0 0 15px rgb(0, 153, 255),
        0 0 18px rgb(0, 153, 255),
        0 0 25px rgb(0, 153, 255),
        0 0 30px rgb(0, 153, 255)
    }
    100% {
        box-shadow:
        /* White glow */
        0 0 3px #fff,
        0 0 5px #fff,
        0 0 14px #fff,
        /* Green glow */
        0 0 8px rgb(0, 153, 255),
        0 0 10px rgb(0, 153, 255),
        0 0 12px rgb(0, 153, 255),
        0 0 15px rgb(0, 153, 255),
        0 0 18px rgb(0, 153, 255)
    }
}

.side {
    height: 12rem;
    width: 12rem;
    color: white;
}

.game-container {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    height: 80vh;
    width: 70vw;
    margin-top: 3rem;
    background-color: #363636;
}

.neon-invalid {
    animation: flowinvalid 3s infinite;
    box-shadow:
    /* White glow */
    0 0 3px #fff,
    0 0 5px #fff,
    0 0 14px #fff,
    /* Green glow */
    0 0 5px #FE0300,
    0 0 7px #FE0300,
    0 0 10px #FE0300,
    0 0 15px #FE0300,
    0 0 18px #FE0300;
}

@keyframes flowinvalid {

    50% {
    box-shadow:
    /* White glow */
    0 0 3px #fff,
    0 0 5px #fff,
    0 0 14px #fff,
    /* Green glow */
    0 0 12px #FE0300,
    0 0 15px #FE0300,
    0 0 18px #FE0300,
    0 0 25px #FE0300,
    0 0 30px #FE0300;
    }
}

.neon-valid {
    animation: flowvalid 3s infinite;
    box-shadow:
    /* White glow */
    0 0 3px #fff,
    0 0 5px #fff,
    0 0 14px #fff,
    /* Green glow */
    0 0 5px #0fa,
    0 0 7px #0fa,
    0 0 10px #0fa,
    0 0 15px #0fa,
    0 0 18px #0fa
}
@keyframes flowvalid {
    50% {
    box-shadow:
    /* White glow */
    0 0 3px #fff,
    0 0 5px #fff,
    0 0 14px #fff,
    /* Green glow */
    0 0 12px #0fa,
    0 0 15px #0fa,
    0 0 18px #0fa,
    0 0 25px #0fa,
    0 0 30px #0fa;
    }
}

.neon-loading {
    animation: loadlight 6s forwards;
}

.neon-unload {
    animation: unloadlight 4s reverse;
}

@keyframes unloadlight {
    100% { 
        box-shadow:
        /* White glow */
        0 0 3px #fff,
        0 0 5px #fff,
        0 0 14px #fff,
        /* Green glow */
        0 0 12px rgb(0, 153, 255),
        0 0 15px rgb(0, 153, 255),
        0 0 18px rgb(0, 153, 255),
        0 0 25px rgb(0, 153, 255),
        0 0 30px rgb(0, 153, 255) 
    }
}

@keyframes loadlight {
    85% { 
        box-shadow:
        /* White glow */
        0 0 3px #fff,
        0 0 5px #fff,
        0 0 14px #fff,
        /* Green glow */
        0 0 18px rgb(0, 153, 255),
        0 0 24px rgb(0, 153, 255),
        0 0 32px rgb(0, 153, 255),
        0 0 35px rgb(0, 153, 255),
        0 0 42px rgb(0, 153, 255) 
    }
    
    100%{
        box-shadow:
        /* White glow */
        0 0 3px #fff,
        0 0 5px #fff,
        0 0 14px #fff,
        /* Green glow */
        0 0 5px #0fa,
        0 0 7px #0fa,
        0 0 10px #0fa,
        0 0 15px #0fa,
        0 0 18px #0fa
    }
}

.light {
    height: 10rem;
    width: 10rem;
    border: 2px solid black;
    border-radius: 50%;
    border: none;
    margin: auto;
    background-color: rgb(117, 116, 116);
}

.green {
    background-color: rgb(7, 247, 7);
    box-shadow: 0px 0px 25px rgb(7, 247, 7);
}

.yellow { 
    background-color: rgb(243, 247, 7);
    box-shadow: 0px 0px 25px rgb(243, 247, 7);
}

.red { 
    background-color: rgb(247, 15, 7);
    box-shadow: 0px 0px 25px rgb(247, 15, 7);
}

.blue {
    background-color: rgb(0, 153, 255);
    box-shadow: 0px 0px 25px rgb(0, 153, 255);
}

.white {
    background-color: whitesmoke;
    box-shadow: 0px 0px 25px whitesmoke;
}

footer {
    position: absolute;
    text-align: center;
    width: 100%;
    height: 2rem;
    font-size: 15px;
    bottom: 0;
    left: 0;
    background-color: black;
    color: white;
    box-shadow: 0px 0px 10px white;
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 5;
}

.shake {
    animation: shake 0.25s forwards;
}

@keyframes shake {
    0% {
        transform: translateX(0rem);
    }
    20% {
        transform: translateX(-.2rem);
    }
    40% {
        tranform: translateX(0rem);
    }
    60% {
        transform: translateX(0.2rem);
    }
    80% {
        transform: translateX(0rem);
    } 
    100% {
        transform: translateX(-0.1rem);
    }
}

#score {
    font-size: 4rem;
}

#ready {
    margin-top: 3rem;
    
}
.countdown {
    font-size: 78px;
    margin-top: 5rem;
}

#start {
    margin-top: 9rem;
}

